# kerbside

./: .gitignore  .stestr.conf  README.md  alembic.ini  bindep.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
alembic/: env.py
alembic/versions/: 5c8101ff14d7_sources_can_be_deleted.py  7d1c2f36a7b3_connection_id_as_bigint.py  ad47e96baff6_initial_schema.py
docs/: schema.html
docs/operator_guide/: config.md
kerbside/: api.py  config.py  consoletoken.py  db.py  main.py  proxy.py  util.py
kerbside/api/static/icons/: README.md
kerbside/api/templates/: audit.html  base.html  consoles.html  login.html  sessions.html  sources.html
kerbside/sources/: base.py  openstack.py  ovirt.py  shakenfist.py
kerbside/spiceprotocol/: __init__.py
kerbside/spiceprotocol/packets/: authentication.py  constants.py  cursor.py  display.py  inputs.py  inspection.py  linkmessages.py  main.py  port.py  scancodes.py  unknown.py
kerbside/tests/functional/: test_openstack.py  test_proxy.py  test_shakenfist.py
kerbside/utilities/: glz.py  lz.py  main.py
tools/: flake8wrap.sh
