[metadata]
name = kerbside
summary = A SPICE VDI proxy with pluggable authentication
license = Apache2
description-file = README.md
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://github.com/shakenfist/kerbside
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    kerbside

[entry_points]
console_scripts =
    kerbside = kerbside.main:cli
    kerbside-util = kerbside.utilities.main:cli

[pbr]
skip_changelog = True
